Alignment issue of the first Article in the Blog Section

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -25,12 +25,6 @@
 
 .gpt3__blog-container_groupA {
     flex: 0.75;
-    margin-right: 2rem;
-}
-
-.gpt3__blog-container_groupA {
-    flex: 0.75;
-    margin-right: 2rem;
 }
 
 .gpt3__blog-container_groupB {
